--- a/SimpleTetris/View/BlockControl.xaml
+++ b/SimpleTetris/View/BlockControl.xaml
@@ -1,15 +1,14 @@
 ﻿<UserControl x:Class="SimpleTetris.View.BlockControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:SimpleTetris.View"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="15" d:DesignWidth="15"
              Width="1"
-             Height="1"
-             >
+             Height="1">
     <Grid>
-        <Rectangle Fill="Snow" StrokeThickness="0.2" Stroke="Black" Name="BlockPolygon"/>
+        <Rectangle Fill="Snow" StrokeThickness="0.2" Stroke="Black" Name="BlockPolygon" />
     </Grid>
 </UserControl>
