--- a/SimpleTetris/View/MainWindow.xaml
+++ b/SimpleTetris/View/MainWindow.xaml
@@ -8,8 +8,7 @@
         mc:Ignorable="d"
         Title="SimpleTetris" Height="800" Width="600" Background="DarkSlateGray"
         KeyDown="MainWindow_KeyDown"
-        SizeChanged="MainWindow_SizeChanged"
-        >
+        SizeChanged="MainWindow_SizeChanged">
     <Window.Resources>
         <viewModel:TetrisViewModel x:Key="ViewModel" />
         <viewModel:BoolVisibilityConverter x:Key="VisibilityConverter" />
@@ -67,7 +66,7 @@
         <StackPanel Grid.Row="1" VerticalAlignment="Center"
                     Opacity="0.9" Background="DarkGray"
                     Visibility="{Binding Path=GameOver, Converter={StaticResource VisibilityConverter}}"
-Margin="0,278,0,277">
+                    Margin="0,278,0,277">
             <TextBlock Text="Game Over"
                        VerticalAlignment="Center"
                        HorizontalAlignment="Center"
