--- a/Periotris/View/StartPage.xaml
+++ b/Periotris/View/StartPage.xaml
@@ -7,26 +7,6 @@
       mc:Ignorable="d"
       d:DesignWidth="800" d:DesignHeight="600"
       Title="StartPage">
-    <Page.Resources>
-        <Style x:Key="GroupHeaderTextStyle" TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="Microsoft YaHei UI" />
-            <Setter Property="TextTrimming" Value="WordEllipsis" />
-            <Setter Property="TextWrapping" Value="NoWrap" />
-            <Setter Property="Foreground" Value="Bisque" />
-            <Setter Property="Typography.StylisticSet20" Value="True" />
-            <Setter Property="Typography.DiscretionaryLigatures" Value="True" />
-            <Setter Property="Typography.CaseSensitiveForms" Value="True" />
-            <Setter Property="FontSize" Value="26.667" />
-            <Setter Property="LineStackingStrategy" Value="BlockLineHeight" />
-            <Setter Property="FontWeight" Value="Light" />
-            <Setter Property="LineHeight" Value="30" />
-            <Setter Property="RenderTransform">
-                <Setter.Value>
-                    <TranslateTransform X="-1" Y="6" />
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -46,9 +26,9 @@
                     >
             <Button x:Name="NormalGameButton"
                     Content="Normal Game"
-                    HorizontalAlignment="Center" Padding="3" Margin="5 0 5 0"
-                    Background="DarkSlateGray" Foreground="Snow"
-                    FontWeight="Bold" FontSize="30"
+                    HorizontalAlignment="Center"
+                    FontSize="25"
+                    Style="{DynamicResource MahApps.Styles.Button}"
                     Click="NormalGameButton_Click"/>
         </StackPanel>
         <TextBlock Grid.Row="3"
