--- a/Periotris/View/MainWindow.xaml
+++ b/Periotris/View/MainWindow.xaml
@@ -30,6 +30,17 @@
             </Button>
         </mah:WindowCommands>
     </mah:MetroWindow.RightWindowCommands>
+    <mah:MetroWindow.Flyouts>
+        <mah:FlyoutsControl>
+            <mah:Flyout x:Name="AboutFlyout" Header="About"
+                        Position="Right" Width="250">
+                <TextBlock Text=""
+                   Margin="10 10 10 10"
+                   Foreground="White"
+                   FontFamily="Microsoft YaHei UI" TextWrapping="Wrap">Copyright (c) 2020-2021 Rong "Mantle" Bao. Licensed under GNU General Public License version 3.</TextBlock>
+            </mah:Flyout>
+        </mah:FlyoutsControl>
+    </mah:MetroWindow.Flyouts>
     <Frame x:Name="MainFrame"
            NavigationUIVisibility="Hidden"
            HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
